# Homework8Fall2024

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: production.yml
app/: __init__.py
tests/: test_start.py
